# 4x-Upscaler-ESRGAN

./: .gitignore  README.md  pyproject.toml  upscale.ipynb
src/: dataloader.py  esrgan.py  losses.py  train.py
